@@ -1,3 +1,13 @@
+Thu Nov  7 19:32:26 2002  Owen Taylor  <otaylor@redhat.com>
+
+	* glib/gutils.[ch] (g_set/get_application_name): 
+	Patch from Havoc Pennington to add functions for 
+	setting and getting a human readable application
+	name.
+
+	* configure.in: Up to version 2.1.3, since we'll
+	need to depend on last addition for GTK+.
+
 2002-11-06  Tor Lillqvist  <tml@iki.fi>
 
 	* glib/glib.def: Add g_main_thread_init.
