@@ -33,7 +33,7 @@ GLIB_AC_DIVERT_BEFORE_HELP([
 #
 GLIB_MAJOR_VERSION=2
 GLIB_MINOR_VERSION=1
-GLIB_MICRO_VERSION=0
+GLIB_MICRO_VERSION=3
 GLIB_INTERFACE_AGE=0
 GLIB_BINARY_AGE=`expr 100 '*' $GLIB_MINOR_VERSION + $GLIB_MICRO_VERSION`
 GLIB_VERSION=$GLIB_MAJOR_VERSION.$GLIB_MINOR_VERSION.$GLIB_MICRO_VERSION
